Set up the home page to point to the home controller index. also got the pages to stop jumping around.  pretty much done with the css at this point...i think.

--- a/public/stylesheets/mediasite.css
+++ b/public/stylesheets/mediasite.css
@@ -15,50 +15,113 @@ root {
     display: block;
 }
 
-div.header
+      body
+      {
+        font-family:sans-serif;
+      }
+
+      h3
+      {
+        font-size:large;
+      }
+
+      a
+      {
+        color: black;
+        text-decoration: none;
+        font-size:large;
+      }
+
+      a:visited
+      {
+        color: black;
+      }
+
+      a:hover
+      {
+        background:none;
+        color: white;
+      }
+
+      div.header
       {
         /*border:1px solid black;*/
-        width:100%;
+        width:752px;
         height:60px;
-        position:absolute;
+        margin:0 auto;
+      }
+
+      div.footer
+      {
+        /*border:1px solid black;*/
+        width:752px;
+        height:60px;
+        position:relative;
+        margin:0 auto;
       }
 
       div.content-row
       {
         /*border:1px solid black;*/
         width:100%;
-        position:relative;
-        top:60px;
+        height:856px;
+        /*position:relative;*/
+        /*top:60px;*/
+             
       }
 
       div.col-wrapper
       {
         /*border:1px solid black;*/
-        width: 750px;
+        width: 752px;
         margin:0 auto;
       }
 
       div.middle-col
       {
         /*border:1px solid black;*/
-        height:800px;
+        height:856px;
         width:752px;
       }
 
       div.content-link
       {
         /*border:1px solid black;*/
-        width:250px;
-        height:40px;
+        width:251px;
+        height:30px;
         padding-top: 12px;
+        font-size:large;
         float:left;        
         background:none;
       }
 
-    a
-    {
-        text-decoration: none
-    }
+      div.content-link:hover
+      {
+        background:gray;
+        -webkit-border-top-left-radius: 8px;
+        -webkit-border-top-right-radius: 8px;
+        -moz-border-radius-topleft: 8px;
+        -moz-border-radius-topright: 8px;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+      }
+
+      div.selected-content-link
+      {
+        width:251px;
+        height:30px;
+        padding-top: 12px;
+        font-size:large;
+        float:left;
+        background:gray;
+        -webkit-border-top-left-radius: 8px;
+        -webkit-border-top-right-radius: 8px;
+        -moz-border-radius-topleft: 8px;
+        -moz-border-radius-topright: 8px;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+      }
+      
 
       div.content-links
       {
@@ -66,7 +129,7 @@ div.header
         
         clear:both;
         text-align:center;
-        width:752px;
+        width:753px;
         height: 40px;
         -webkit-border-top-left-radius: 8px;
         -webkit-border-top-right-radius: 8px;
@@ -77,16 +140,13 @@ div.header
         background:#CCCCCC;
         border-bottom:2px solid grey;
       }
-      div.content-links:hover
-      {
-          color:gray;
-      }
+      
 
       div.display-window
       {
         /*border:1px solid black;*/
         background:black;
-        width:752px;
+        width:753px;
         height:400px;
         -webkit-border-bottom-left-radius: 8px;
         -webkit-border-bottom-right-radius: 8px;
@@ -99,9 +159,11 @@ div.header
       div.content-column
       {
         margin-top:1px;
+        padding-top:5px;
+        padding-bottom:5px;
         border:1px solid black;
-        width:752px;
-        height:400;
+        width:751px;
+        height:400px;
         float:left;
         -webkit-border-top-left-radius: 8px;
         -webkit-border-top-right-radius: 8px;
@@ -122,27 +184,102 @@ div.header
       {
         /*border:1px solid black;*/
         /*background:green;*/
-        width:250px;
+        width:249px;
         height:400px;
         float:left;
-        border-right:1px solid black;
+        border-right:1px solid grey;
       }
 
       div.show-column
       {
         /*border:1px solid black;*/
         /*background:red;*/
-        width:250px;
+        width:249px;
         height:400px;
         float:left;
-        border-right:1px solid black;
+        border-right:1px solid grey;
       }
 
       div.music-column
       {
         /*border:1px solid black;*/
         /*background:yellow;*/
-        width:250px;
+        width:249px;
         height:400px;
         float:left;
+      }
+
+      div.band-column
+      {
+        /*border:1px solid black;*/
+        /*background:green;*/
+        width:249px;
+        height:400px;
+        float:left;
+        border-right:1px solid grey;
+      }
+
+      div.category-column
+      {
+        /*border:1px solid black;*/
+        /*background:red;*/
+        width:249px;
+        height:400px;
+        float:left;
+        border-right:1px solid grey;
+      }
+
+      div.playlist-column
+      {
+        /*border:1px solid black;*/
+        /*background:yellow;*/
+        width:249px;
+        height:400px;
+        float:left;
+      }
+
+      div.show-grid
+      {
+        margin-top:1px;
+        padding-top:5px;
+        padding-bottom:5px;
+        width:750px;
+        height:400px;
+        float:left;
+        -webkit-border-top-left-radius: 8px;
+        -webkit-border-top-right-radius: 8px;
+        -moz-border-radius-topleft: 8px;
+        -moz-border-radius-topright: 8px;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+
+        -webkit-border-bottom-left-radius: 8px;
+        -webkit-border-bottom-right-radius: 8px;
+        -moz-border-radius-bottomleft: 8px;
+        -moz-border-radius-bottomright: 8px;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+      }
+
+      div.movie-grid
+      {
+        margin-top:1px;
+        padding-top:5px;
+        padding-bottom:5px;
+        width:750px;
+        height:400px;
+        float:left;
+        -webkit-border-top-left-radius: 8px;
+        -webkit-border-top-right-radius: 8px;
+        -moz-border-radius-topleft: 8px;
+        -moz-border-radius-topright: 8px;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+
+        -webkit-border-bottom-left-radius: 8px;
+        -webkit-border-bottom-right-radius: 8px;
+        -moz-border-radius-bottomleft: 8px;
+        -moz-border-radius-bottomright: 8px;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
       }
